models/tests/ucl/errors/syntactic/nobracketproof.ucl
// UCLID TEST
// Solver=cvc4
// Result=None

type key;
type frame = record {k : key, i : integer, b : boolean, k2: key};

module main
{
    var a : frame;

    control {
        induction;

    invariant couldbe: a.k2 != a.k;
}